@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.136 2001/09/06 09:00:31 stelian Exp $
+$Id: CHANGES,v 1.137 2001/09/12 09:02:51 stelian Exp $
 
 Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
 ===================================================================
@@ -36,7 +36,10 @@ Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
 	a bit those who use dump on mounted filesystems. Thanks to
 	John Yu <jky@it.bu.edu> and to Theodore T'so <tytso@mit.edu>
 	for this suggestion.
-	
+
+9.	Updated the RPM spec file following the RedHat changes 
+	(dynamically linked binaries now in /usr/sbin etc).
+
 Changes between versions 0.4b22 and 0.4b23 (released July 20, 2001)
 ===================================================================
 
